--- a/_includes/projects-grid.html
+++ b/_includes/projects-grid.html
@@ -8,10 +8,10 @@
   </div>
 
   <div class="card">
-    <h3>📺 Friends Series Sentiment Analysis</h3>
-    <p>Analyzed emotions of characters over seasons using NLP on transcript data.</p>
-    <p><strong>Tools:</strong> Python, NLTK, TextBlob</p>
-    <p><a href="https://github.com/Bhupender-Bhupender/Friends-Series-Sentiment-Analysis" target="_blank">View on GitHub</a></p>
+    <h3>📺Student Management System (R + Shiny + MariaDB)</h3>
+    <p>A robust and interactive web-based Student Management System (SMS) built using R, Shiny, and RmariaDB.</p>
+    <p><strong>Tools:</strong> Shiny & Defensive Programming, RmariaDB, OOPs in R, Custom Functions & Packages & Vectorization</p>
+    <p><a href="https://github.com/Bhupender-Bhupender/R.Shiny-MariaDB-Student-App" target="_blank">View on GitHub</a></p>
   </div>
 
   <div class="card">
